add proper dependencies to docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,9 @@ services:
     build:
       dockerfile: Dockerfile.dev
       context: ./nginx
+    depends_on: 
+      - client
+      - api
     ports:
       - '3050:80'
   api:
