--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "body-parser": "*"
   },
   "scripts": {
-    "dev": "nodemon",
+    "dev": "nodemon --inspect index.js",
     "start": "node index.js"
   }
 }
